--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">OnlineSinavAndroidApp</string>
+    <string name="dialogOkButton">Tamam</string>
+    <string name="noConnection">İnternet Bağlantısı Yok</string>
 </resources>
