Sınav sayfası tasarımı güncellendi. Şıkların çalışma fonksiyonu tamamlandı ve cevaplar web servise gönderilmeye hazır hale getirildi.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
 
     <string name="ok">Tamam</string>
 
+
+    <string name="sinav_bitis">Sınav Tamamlanmıştır. Başarılar Dileriz.</string>
+
 </resources>
